Fixed some issues in alignments

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,6 +1,11 @@
 .footerPadding {
     padding-right: 108px;
     padding-left: 108px;
+    margin-bottom: 10px;
+}
+.CopyrightPadding{
+    padding-right: 108px;
+    padding-left: 108px;
 }
 
 .footer {
@@ -18,6 +23,8 @@
     text-decoration: none;
     font-size: 1.13em;
     font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .footerBottomMargin {
@@ -87,13 +94,19 @@
 
 @media only screen and (max-width: 900px) {
     .link {
-        margin-bottom: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .LinkList{
+        padding-top: 15px;
+        padding-bottom: 15px;
     }
 
     .CenterAlign {
         text-align: center;
         margin-top: 5px;
-        margin-bottom: 5px;
+        // marging-bottom: 15px;
     }
     .leftAlign{
         text-align: left;
@@ -104,7 +117,7 @@
         margin-left: 2px;
     }
 
-    .footerPadding {
+    .footerPadding, .CopyrightPadding {
         padding-right: 20px;
         padding-left: 20px;
     }
@@ -114,8 +127,9 @@
         height: auto;
     }
 
-    .copyright {
+    .copyrightText {
         margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     .intro {
@@ -129,6 +143,14 @@
     .footer{
         background-size: 250% 85%;
         background-position-y:50px;
+    }
+
+    .footerRight{
+        margin-bottom: 15px;
+    }
+
+    .mobileMargin{
+        margin-top: 15px;
     }
 
     //active bellow commented codes if need to change the font size on desktop view(maxWidth>60)
